--- a/data/panel.html
+++ b/data/panel.html
@@ -27,10 +27,8 @@
     <div id="body">
         <div class="account">
 
-                <span id="user-name">emily.taylor33@hasalongdomain.com</span>
-
                 <div class="pull-right">
-                    <span data-link="logout" id="logout">logout</span>
+                    <span data-link="logout" id="logout">uitloggen</span>
 
                     <i data-link="help" class="icon-question-sign" id="help"></i>
 
@@ -40,6 +38,8 @@
                             id="close"
                             style="float:right; cursor:pointer;"></i>
                 </div>
+
+                <span id="user-name">emily.taylor33@hasalongdomain.com</span>
 
         </div>
     
