Removed unnecessary inline css

--- a/data/panel.html
+++ b/data/panel.html
@@ -34,9 +34,7 @@
 
                     <i data-link="settings" class="icon-cog" id="settings"></i>
 
-                    <i class="icon-remove-sign"
-                            id="close"
-                            style="float:right; cursor:pointer;"></i>
+                    <i class="icon-remove-sign" id="close"></i>
                 </div>
 
                 <span id="user-name">emily.taylor33@hasalongdomain.com</span>
