--- a/data/panel.html
+++ b/data/panel.html
@@ -28,8 +28,8 @@
             </fieldset>
             <br />
 
-            <ul class="menu">
-                <li data-link="login" id="login">
+            <ul class="menu" id="login">
+                <li data-link="login" >
                     <i class="icon-signin"></i>
                     Inloggen
                 </li>
