Add basic multilingual support.

--- a/data/clicktodial/html/clicktodial.html
+++ b/data/clicktodial/html/clicktodial.html
@@ -12,14 +12,12 @@
         <div class="voipgrid-status">
             <p class="heading">
                 <i class="fa fa-fw fa-phone-square fa-vertical-align"></i>
-                <!-- 'Calling to' -->
-                Gesprek naar
+                <span data-l10n-id="clicktodialTitle"></span>
                 <span id="number">?</span>
                 <i id="close" class="close fa fa-fw fa-times-circle pull-right"></i>
             </p>
             <p class="status">
-                <!-- 'Status' -->
-                <span class="status-label">Status:</span>
+                <span class="status-label" data-l10n-id="clicktodialStatusLabel"></span>
                 <span id="status" class="status-text"></span>
             </p>
         </div>
