--- a/data/panel/html/panel.html
+++ b/data/panel/html/panel.html
@@ -43,6 +43,7 @@
                     <span class="shortcuts">
                         <i id="close" class="fa pull-right fa-times-circle" data-l10n-title="closePanelTitle"></i>
                         <i id="settings" class="fa pull-right fa-cog" data-link="settings" data-l10n-title="openSettingsTitle"></i>
+                        <i id="refresh" class="fa pull-right fa-refresh" data-l10n-title="refreshPanelTitle"></i>
                         <i id="help" class="fa pull-right fa-question-circle" data-link="help" data-l10n-title="openHelpTitle"></i>
                     </span>
                 </div>
@@ -53,6 +54,7 @@
                     <h3 class="widget-title">
                         <i class="fa fa-fw fa-phone-square fa-vertical-align widget-icon"></i>
                         <i class="fa fa-fw fa-spinner fa-spin fa-vertical-align busy-icon"></i>
+                        <i class="fa fa-fw fa-triangle fa-exclamation-triangle fa-vertical-align unauthorized-icon"></i>
                         <span data-l10n-id="availabilityWidgetTitle"></span>
                     </h3>
                 </div>
@@ -76,12 +78,14 @@
                         </div>
                     </form>
                 </div>
+                <div class="unauthorized-warning hide" data-l10n-id="availabilityUnauthorizedWarning"></div>
             </div>
             <div class="widget queues" data-opened="false" data-widget="queues">
                 <div class="widget-header no-select">
                     <h3 class="widget-title">
                         <i class="fa fa-fw fa-clock-o fa-vertical-align widget-icon"></i>
                         <i class="fa fa-fw fa-spinner fa-spin fa-vertical-align busy-icon"></i>
+                        <i class="fa fa-fw fa-triangle fa-exclamation-triangle fa-vertical-align unauthorized-icon"></i>
                         <span data-l10n-id="queuesWidgetTitle"></span>
                     </h3>
                 </div>
@@ -102,6 +106,7 @@
                         </li>
                     </ul>
                 </div>
+                <div class="unauthorized-warning hide" data-l10n-id="queuesUnauthorizedWarning"></div>
             </div>
         </div>
         <!-- /Plugin container -->
